# ninjamplus

./: .gitignore  .gitmodules  CMakeLists.txt  LEGAL_NOTICES.txt  LICENSE  README  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  vcpkg.json
.github/workflows/: build.yml  ci.yml  reaninjam-ci.yml  reaninjam-release.yml  release.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source - Copy/: PluginProcessor.cpp  ProVideoCodec.cpp  ProVideoCodec.h
advanced-vdo-client/: app.html  index.html  package-lock.json  package.json  server.js
extras/ninjam-vst3/: CMakeLists.txt
extras/ninjam-vst3/Source/: PluginEditor.cpp  PluginProcessor.cpp  StandaloneApp.cpp
extras/ninjam-vst3/Source - Copy/: PluginEditor.h  PluginProcessor.cpp  ProVideoCodec.h
extras/ninjam-vst3/textures/Pink Glitter 2/: Attributions.txt
extras/ninjam-vst3/textures/Water Sea/: Attributions.txt
jmde/fx/reaninjam/: locchn.cpp  remchn.cpp  res.rc  resource.h  winclient.cpp
ninjam/: mpb.cpp  mpb.h  netmsg.h  njclient.cpp  njclient.h
ninjam/server/: CMakeLists.txt  usercon.cpp  usercon.h
scripts/macos/: NINJAM-VDO-Fix.command
scripts/macos/pkg/: postinstall
textures/: howto.txt
